# roll_lang_server

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  build.sh
migrations/2020-09-11-051410_create_players/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/contexts/: mod.rs
src/forms/: mod.rs
src/models/: mod.rs
src/models/macro/: insertable_macro.rs  mod.rs
src/models/player/: insertable_player.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/player/: macros.rs  mod.rs  settings.rs
