[package]
name = "roll_lang_server"
version = "0.1.0"
authors = ["jacobguenther <jacobrwguenther@protonmail.com>"]
edition = "2018"

[dependencies]
logging = "0.1.0"
rocket = "0.4.3"
serde_json = "1.0.53"
tera = "0.11.20"

[dependencies.serde]
version = "1.0.111"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.3"
features = ["tera_templates"]