[package]
name = "roll_lang_server"
version = "0.1.0"
authors = ["jacobguenther <jacobrwguenther@protonmail.com>"]
edition = "2018"

[dependencies]
logging = "0.1.0"
rocket = "0.4.5"
serde_json = "1.0.57"
tera = "1.5.0"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates"]