[package]
name = "roll_lang_server"
version = "0.1.0"
authors = ["jacobguenther <jacobrwguenther@protonmail.com>"]
edition = "2018"

[dependencies]
logging = "0.1.0"
rocket = "0.4.5"
serde_json = "1.0.57"
tera = "1.5.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket-auth-login = { git =  "https://github.com/vishusandy/rocket-auth-login"}
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0.116"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "r2d2"]
